Log less information about filtered sources.
Fixes #117325

Create a baselines package for generated baselines.

Refs #39052